added navigation html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
 
  <!-- navigation code here -->
 
+ <header class="container top">
+  <h1 class="slide-in">SpaceWalkers</h1>
+
+  <nav id="links">
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Blog</a>
+    <a href="#">Contact</a>
+    <a href="#">Sign In</a>
+  </nav>
+
+</header>
+
   <div class="container home">
 
     <header class="intro">
