--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <header class="intro">
        <!-- image code here -->
+       <img src="img/main-header.png" class= "planet" alt="Planet Horizon">
 
       <h2>Lift Off</h2>
     
